Fix link decoration visibility

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,6 +92,10 @@ dialog {
   overflow: auto;
   max-width: 350px;
 }
+.gadgetSection a {
+  text-decoration-color: black;
+}
+
 ul {
   list-style: none;
 }
@@ -134,7 +138,9 @@ select, input, textarea {
   padding: 4px;
   background: var(--secondary);
 }
-
+.categorySections > section a {
+  text-decoration-color: black;
+}
 button {
   background-color: var(--primary);
   font-size: 1.333rem;
